@@ -10,13 +10,9 @@ Should-Have
 - Fix misleading conflict error reports for static views ala
   http://cluebin.appspot.com/pasted/7242843
 
-- Nicer Mako exceptions in WebError.
-
 - Consider adding a default exception view for HTTPException and attendant
   ``redirect`` and ``abort`` functions ala Pylons (promised Mike I'd enable
   this in 1.1).
-
-- Static (URL-generation only) routes.
 
 - Add narrative docs for wsgiapp and wsgiapp2.
 
@@ -27,6 +23,8 @@ Should-Have
 
 Nice-to-Have
 ------------
+
+- Nicer Mako exceptions in WebError.
 
 - Response.RequestClass should probably be pyramid.request.Request but this
   may imply actually subclassing webob.Response
